# agentic-evaluation

./: .env.example  README.md  evaluate.py  pyproject.toml
