[tool.poetry]
name = "agentic-evaluation"
version = "0.1.0"
description = "LLM-Ops: Evaluating LangGraph Agents with MLflow GenAI Evaluate"
authors = ["Nils Gies"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

langgraph = "^1.1.3"
langchain = "^1.2.13"
langchain-azure-ai = "^1.2.0"
python-dotenv = "^1.2.2"
mlflow = {extras = ["genai"], version = "^3.10.1", python = ">=3.12,<3.15"}
matplotlib = ">=3.9"
scikit-learn = ">=1.5"
azure-identity = ">=1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
